[package]
name = "system"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Andrew Kozmin <syn.kolbasyn.06@gmail.com>"]
description = "The program that gives access to the system"
readme = "README.md"
homepage = "https://github.com/SynKolbasyn/system"
repository = "https://github.com/SynKolbasyn/system"

[dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
homedir = "0.3.3"
itertools = "0.13.0"
libp2p = { version = "0.54.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha3 = "0.10.8"
ssh-key = { version = "0.6.6", features = ["ed25519", "encryption", "getrandom"] }
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4.41"
tokio = { version = "1.40.0", features = ["full"] }
xz = { version = "0.1.0", features = ["tokio"] }
